# xmuda

./: .gitignore  Makefile  README.md  pyproject.toml
configs/a2d2_semantic_kitti/ssda/: ssda_baseline_src_trg.yaml  ssda_baseline_trg.yaml  xmssda.yaml  xmssda_pl.yaml
configs/a2d2_semantic_kitti/uda/: baseline.yaml  xmuda.yaml  xmuda_pl.yaml
configs/nuscenes_lidarseg/day_night/uda/: baseline.yaml  mmtta.yaml  xmuda.yaml  xmuda_pl.yaml
configs/nuscenes_lidarseg/usa_singapore/ssda/: ssda_baseline_src_trg.yaml  ssda_baseline_trg.yaml  xmssda.yaml  xmssda_pl.yaml
configs/nuscenes_lidarseg/usa_singapore/uda/: baseline.yaml  mmtta.yaml  xmuda.yaml  xmuda_pl.yaml
configs/virtual_kitti_semantic_kitti/ssda/: ssda_baseline_src_trg.yaml  ssda_baseline_trg.yaml  xmssda.yaml  xmssda_pl.yaml
configs/virtual_kitti_semantic_kitti/uda/: baseline.yaml  xmuda.yaml  xmuda_pl.yaml
xmuda/: mmtta.py  test.py  train_baseline.py  train_baseline_src_trg.py  train_xmuda.py
xmuda/common/config/: base.py
xmuda/common/utils/: checkpoint.py
xmuda/config/: xmuda.py
xmuda/data/: build.py
xmuda/data/a2d2/: a2d2_dataloader.py  preprocess.py
xmuda/data/nuscenes_lidarseg/: nuscenes_lidarseg_dataloader.py  preprocess.py
xmuda/data/semantic_kitti/: preprocess.py  semantic_kitti_dataloader.py
xmuda/data/utils/: evaluate.py  validate.py  visualize.py
xmuda/data/virtual_kitti/: preprocess.py  virtual_kitti_dataloader.py
