[project]
name = "xmuda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
tool.uv.package = true
dependencies = [
    "aim>=3.29.1",
    "clearml>=1.18.0",
    "nuscenes-devkit>=1.1.11",
    "sparseconvnet",
    "tabulate>=0.9.0",
    "tensorboard>=2.19.0",
    "tensorflow>=2.19.0",
    "torch>=2.7.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.22.0",
    "yacs>=0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xmuda"]

[tool.uv.sources]
sparseconvnet = { git = "https://github.com/lokeshmohanty/SparseConvNet.git" }

[dependency-groups]
dev = [
    "mlflow>=3.1.1",
]
